<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0A129F"
        app:navigationIcon="@drawable/ic_back"
        app:title="Registrasi">

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/Logo"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/icons1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met1"
        android:layout_below="@+id/Logo"
        android:paddingHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/nama"
            android:drawableStart="@drawable/ic_name"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met2"
        android:layout_below="@+id/met1"
        android:paddingHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email_id"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met3"
        android:layout_below="@+id/met2"
        android:paddingHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met4"
        android:layout_below="@+id/met3"
        android:paddingHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/confirm_password"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/met5"
        android:layout_below="@+id/met4"
        android:paddingHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/enter_mobile"
            android:drawableStart="@drawable/ic_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgRadio"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/met5"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/RbMale"
            android:textColor="#141515"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/RbFamele"
            android:text="@string/female"
            android:textColor="#141515"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrasi"
        android:text="@string/registrasi"
        android:layout_below="@+id/rgRadio"
        android:layout_marginHorizontal="50dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>